# qtBugReportExec

./: CMakeLists.txt  bug.md  envWayland.txt  main.cpp  osWayland.txt  osX11.txt
